Suppress warning for org.bouncycastle.jcajce.provider